12 Jul 2010 Add lock on configuration file to prevent duplicate disk/tape files from being opened.
11 Jul 2010 Add checks for a valid CNSLPORT. If 1st char of port is numeric all must be numeric 
            and in the range of 0-65535. If the first char is not numeric, no checks are made.
09 Jul 2010 Add DIR/LS commands as appropriate. Add "mt" command for Mag tape control. 
            Command mt supports rew, fsf, bsf, fsr, bsr, asf and wtm sub functions.
            Type "help mt" for more information.
08 Jul 2010 Add FAKETAPE support in hetupd and hetget. (autogen.sh and ./configure rerun required)
06 Jul 2010 Add FTLIB.C FakeTape library; add support in hetmap and hetinit for 
            FAKETAPE.
22 Jun 2010 CAPPING feature. Capping can be set in hercules.cnf with the keyword
            CAPPING and a number, representing the maximum MIPS for CPs. Capping
            does not apply to specialty engines.
15 Jun 2010 'QUIT' processing has changed. The 'cmdlevel' is defaulting to
            operator, maintenance and programmer. If 'quit' is entered and
            developer is not enabled then 'quit' will check for any active
            cpu. If an active cpu is found, a message is presented indicating
            that the system is running. A second message is then presented
            asking for confirmation by entering a 2nd 'quit' command. 
            If 'cmdlevel +developer' has been entered, then 'quit' stops
            hercules immediately. 'qquit' has been removed.
13 Jun 2010 'EXCPs' tag has been changed to 'IO'.
13 Jun 2010 'QUIT' will now only ask for 2nd quit if any processor is active.
            New message added indicating that the machine is not quiesced.
13 Jun 2010 The 60 seconds for QUIT and SSD has been replaced by #define 
            QUITTIME_PERIOD and is now defaulted to 10 seconds.
08 Jun 2010 'scpimply' and 'scpecho' use ON/OFF now instead of being a toggle.